# Yet-Another-Renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  taskfile.yml
include/: canvas.h  color.h  light.h  point.h  renderer.h  sphere.h  viewport.h  world.h
src/: canvas.cpp  color.cpp  light.cpp  main.cpp  point.cpp  renderer.cpp  sphere.cpp  viewport.cpp
tests/: CMakeLists.txt  TestPoints.cpp
yetAnotherRendererProject/: canvas.cpp  color.cpp  helper.cpp  main.cpp
